# easy_provision

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  captdns.c  component.mk  easy_provision.c  htportal.c  jsportal.c  mockserver.py  mustach-wrap.c  partitions.csv  sdkconfig  wifi_main.c
fs/: index.htm  portal_connected.html  portal_index.html  portal_manual.html  portal_script.js  portal_select.html  portal_style.css
htportal/: connected.html  header.html  index.html  manual.html  network.html  password.html  portal_style.css  scan_foot.html  scan_head.html  style.css
include/: easy_provision.h
jsportal/: index.html  manual.html  portal_index.html  portal_style.css  script.js  select.html
main/: CMakeLists.txt  captdns.c  captdns.h  htportal.c  htportal.h  jsportal.c  portal_server.c  portal_server.h  ui_server.c  ui_server.h  wifi_main.c  wifi_main.h
private/: internal.h  jsportal.h  mustach.h
